--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   ],
   "node-red": {
     "nodes": {
-      "m2x": "m2x.js"
+      "m2x": "m2x.js",
+      "m2x feed": "m2x_feed.js"
     }
   },
   "author": {
